# equational_theories

./: .gitattributes  .gitignore  .gitpod.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DecideBang.lean  LICENSE  Project.lean  README.md  Unidecode-1.3.8-py3-none-any.whl  conjectures.json  equational-theories.code-workspace  equational_theories.lean  flake.nix  full_entries.json  lake-manifest.json  lakefile.toml  most_wanted_677.txt  out.txt  pyvenv.cfg  remaining.json  remaining.json2  requirements.in  requirements.txt  test.p
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
blueprint/: lean_decls
commentary/: Equation1.md  Equation10.md  Equation100.md  Equation101.md  Equation102.md  Equation1027.md  Equation1028.md  Equation1029.md  Equation103.md  Equation1033.md  Equation1036.md  Equation1037.md  Equation1038.md  Equation1039.md  Equation104.md  Equation1042.md  Equation1043.md  Equation1045.md  Equation1046.md  Equation1048.md  Equation1049.md  Equation105.md  Equation1050.md  Equation1052.md  Equation1053.md  Equation106.md  Equation1060.md  Equation1061.md  Equation107.md  Equation1073.md  Equation1075.md  Equation1076.md  Equation108.md  Equation1082.md  Equation1083.md  Equation1085.md  Equation1086.md  Equation109.md  Equation1096.md  Equation11.md  (+599 more)
data/: Austin_implications.txt  Higman-Neumann.json  README.md  REDUCED.csv  dual_equations.md  duals.json  equations.txt  finite_poly_refutations.txt  linear_magma_coefficient_analysis.json  linear_magma_reduced_restrictions_commutative.txt  linear_magma_reduced_restrictions_non_commutative.txt  linear_magma_restrictions.txt  most_wanted.md  outstanding_3op_implications.txt  small_magma_examples.txt  smallest_magma.txt  smallest_magma_examples.txt  unknowns_10_06.txt  unknowns_10_07.json
docbuild/: .gitignore  lake-manifest.json  lakefile.toml
docs/: OLD_PROGRESS.md  graph_operations.md
equational_theories/: AdjoinFresh.lean  AllEquations.lean  Asterix.lean  Basic.lean  BooleanAlternate.lean  BooleanMagma.lean  BooleanRing.lean  CentralGroupoids.lean  Closure.lean  Confluence.lean  (+76 more)
scripts/finite_magma_tools/: README.md  finite_magma_tools.cabal
scripts/finite_magma_tools/app/FiniteMagmaTools/: Evaluator.hs  Magma.hs
scripts/finite_magma_tools/app/GenRefutations/: Main.hs
scripts/finite_magma_tools/app/MakePlan/: Main.hs  Plan.hs  PlanParser.hs
scripts/finite_magma_tools/app/MinCover/: Main.hs
scripts/finite_magma_tools/app/ParseMace4/: Main.hs
(+1319 files in other folders)
